--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'inter';
-    --botao-azul-efeito: #3e91f7;
+    --botao-azul-efeito: #bb7cff;
 }
 
 body {
